my first portfolio website

--- a/SMAH.css
+++ b/SMAH.css
@@ -21,6 +21,28 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+#about {
+     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.section-heading {
+    max-width: 827px; 
+    text-align: center;
+}
+
+.section-heading h2 {
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.section-heading p {
+    font-size: 18px;
+    margin-bottom: 30px ;
+    line-height: 23px;
+    color: #757575;
+}
+
+
 .logo h2 {
     font-size: 45px;
     font-weight: 900;
@@ -105,4 +127,35 @@ nav .menu a {
 #banner .banner-content img {
     max-width: 1000px;
     vertical-align: middle;
+}
+
+#about {
+    padding-top: 140px;
+    /*padding-bottom: 232px;
+    background-color: rgb(87, 90, 72);*/
+}
+
+#about .about-container {
+    width: 60%;
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 130px 150px ;
+}
+
+#about .about-container .about-info {
+    display: flex;
+    justify-content: space-around;
+    gap: 15px; 
+}
+
+.about-info .info-card p {
+    font-size: 10x;
+    line-height: 30px;
+    color: #757575
+}
+
+.about-info .info-card h4 {
+    font-size: 16px;
 }
